@@ -1,6 +1,6 @@
 Package: InteractionSet
-Version: 1.5.1
-Date: 2017-04-25
+Version: 1.5.2
+Date: 2017-05-11
 Title: Base Classes for Storing Genomic Interaction Data
 Author: Aaron Lun <alun@wehi.edu.au>, Malcolm Perry <mgperry32@gmail.com>,
         Liz Ing-Simmons <liz.ing-simmons12@csc.mrc.ac.uk> 
