@@ -2,8 +2,10 @@
 \title{InteractionSet News}
 \encoding{UTF-8}
 
-\section{Version 1.5.1}{\itemize{
+\section{Version 1.5.2}{\itemize{
 \item Removed c method for InteractionSet, rbind method for GInteractions.
+
+\item Generalized ContactMatrix to allow any type of matrix-like object.
 
 \item Separated subsetting and combining documentation into two different pages. 
 }}
